--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -19,15 +19,15 @@
 
 
   <style>
-    html {
+    /* html {
+      font-size: 16px;
+    } */
+
+    body {
       background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
       background-size: cover;
       font-family: 'helvetica neue';
       text-align: center;
-      font-size: 10px;
-    }
-
-    body {
       margin: 0;
       font-size: 2rem;
       display: flex;
