--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -14,6 +14,7 @@
       <div class="hand hour-hand"></div>
       <div class="hand min-hand"></div>
       <div class="hand second-hand"></div>
+      <div class="center"></div>
     </div>
   </div>
 
@@ -56,7 +57,19 @@
       width: 100%;
       height: 100%;
       transform: translateY(-3px);
+      display: flex;
       /* account for the height of the clock hands */
+    }
+
+    .center {
+      width: 6px;
+      height: 6px;
+      background: black;
+      border: 1px solid black;
+      border-radius: 50%;
+      margin: auto;
+      align-self: center;
+      transform: translateY(3px);
     }
 
     .hand {
