--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -81,6 +81,21 @@
       transform-origin: 100%;
       /* transition: transform 0.1s cubic-bezier(0.34, 1.56, 0.64, 1); */
     }
+
+    .hour-hand {
+      width: 33%;
+      margin-left: 17%;
+    }
+
+    .min-hand {
+      width: 49%;
+      margin-left: 1%;
+    }
+
+    .second-hand {
+      width: 50%;
+      background: white;
+    }
   </style>
 
   <script>
